<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/city_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/city_name"
        android:textAlignment="center"
        android:textSize="19sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/current_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25sp"
        android:text="@string/current_temp"
        android:textSize="75sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/city_name" />

    <TextView
        android:id="@+id/feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40sp"
        android:text="@string/feels_like"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_temp" />

    <TextView
        android:id="@+id/low_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/low_temp"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/feels_like" />

    <TextView
        android:id="@+id/high_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/high_temp"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/low_temp" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/humidity"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/high_temp" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pressure"
        android:textSize="19sp"
        app:layout_constraintStart_toStartOf="@id/current_temp"
        app:layout_constraintTop_toBottomOf="@id/humidity" />

    <ImageView
        android:id="@+id/current_condition_icon"
        android:layout_width="72dp"
        android:layout_height="72dp"
        android:layout_marginEnd="25dp"
        android:importantForAccessibility="no"
        android:scaleType="center"
        android:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="@id/feels_like"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/current_temp" />

    <Button
        android:id="@+id/forecastButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forecast"
        android:layout_marginBottom="102dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>