<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="96dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/condition_icon"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:src="@drawable/sun"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/forecast_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/condition_icon"
        app:layout_constraintBottom_toBottomOf="@id/condition_icon"
        app:layout_constraintTop_toTopOf="@id/condition_icon"
        tools:text="@string/forecast_date"/>

    <TextView
        android:id="@+id/forecast_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toEndOf="@id/condition_icon"
        app:layout_constraintTop_toTopOf="@id/condition_icon"
        tools:text="@string/forecast_high"/>

    <TextView
        android:id="@+id/forecast_low"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        app:layout_constraintStart_toEndOf="@id/condition_icon"
        app:layout_constraintBottom_toBottomOf="@id/condition_icon"
        tools:text="@string/forecast_low"/>

    <TextView
        android:id="@+id/forecast_sunrise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/condition_icon"
        tools:text="@string/forecast_sunrise"/>

    <TextView
        android:id="@+id/forecast_sunset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/condition_icon"
        tools:text="@string/forecast_sunset"/>


</androidx.constraintlayout.widget.ConstraintLayout>